force-app/main/default/objects/QuoteLineItem/fields/Coating__c.field-meta.xml
<CustomField>
    <fullName>Coating__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coating</label>
    <referenceTo>CoatingType__c</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>QuoteLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>