force-app/main/default/objects/QuoteLineItem/fields/CoatingCost__c.field-meta.xml
<CustomField>
    <fullName>CoatingCost__c</fullName>
    <label>Coating Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>