force-app/main/default/objects/QuoteLineItem/fields/CostsTKB__c.field-meta.xml
<CustomField>
    <fullName>CostsTKB__c</fullName>
    <label>Costs (TKB)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>