force-app/main/default/objects/QuoteLineItem/fields/CustomDuty__c.field-meta.xml
<CustomField>
    <fullName>CustomDuty__c</fullName>
    <label>Custom Duty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>