force-app/main/default/objects/QuoteLineItem/fields/ExchangeTimestamp__c.field-meta.xml
<CustomField>
    <fullName>ExchangeTimestamp__c</fullName>
    <label>Exchange Timestamp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>