force-app/main/default/objects/QuoteLineItem/fields/ExtraCosts__c.field-meta.xml
<CustomField>
    <fullName>ExtraCosts__c</fullName>
    <label>Extra Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>