force-app/main/default/objects/QuoteLineItem/fields/For_Temporary_Update_Sales_m__c.field-meta.xml
<CustomField>
    <fullName>For_Temporary_Update_Sales_m__c</fullName>
    <label>For Temporary Update Sales m</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>