force-app/main/default/objects/QuoteLineItem/fields/ID_ERP__c.field-meta.xml
<CustomField>
    <fullName>ID_ERP__c</fullName>
    <description>Record&apos;s ID in ERP system.</description>
    <inlineHelpText>Record&apos;s ID in ERP system.</inlineHelpText>
    <label>ID in ERP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>