force-app/main/default/objects/QuoteLineItem/fields/InquiryQuantity__c.field-meta.xml
<CustomField>
    <fullName>InquiryQuantity__c</fullName>
    <description>Quantity in customer&apos;s preferred measurement unit.</description>
    <inlineHelpText>Quantity of the product in customer&apos;s preferred measurement unit.</inlineHelpText>
    <label>Quantity (units)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>3</scale>
    <type>Number</type>
</CustomField>