force-app/main/default/objects/QuoteLineItem/fields/InquiryUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>InquiryUnitPrice__c</fullName>
    <description>Price of the product per measurement unit in customer&apos;s inquiry.</description>
    <inlineHelpText>Price of the product per measurement unit in customer&apos;s inquiry.</inlineHelpText>
    <label>Sales Price (per unit)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>