force-app/main/default/objects/QuoteLineItem/fields/MarginBillet_t__c.field-meta.xml
<CustomField>
    <fullName>MarginBillet_t__c</fullName>
    <label>Margin Billet (per t)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>