force-app/main/default/objects/QuoteLineItem/fields/MarginTKB_t__c.field-meta.xml
<CustomField>
    <fullName>MarginTKB_t__c</fullName>
    <label>Margin TKB (per t)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>