force-app/main/default/objects/QuoteLineItem/fields/MetalPriceForProduction__c.field-meta.xml
<CustomField>
    <fullName>MetalPriceForProduction__c</fullName>
    <label>Metal Price for Production</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>