force-app/main/default/objects/QuoteLineItem/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>This name will be displayed on the list layouts, some reports, etc.</description>
    <inlineHelpText>This name will be displayed on the list layouts, some reports, etc.</inlineHelpText>
    <label>Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>