force-app/main/default/objects/QuoteLineItem/fields/OpportunityLineItemITENumber__c.field-meta.xml
<CustomField>
    <fullName>OpportunityLineItemITENumber__c</fullName>
    <description>ITE Number of the related opportunity line item</description>
    <externalId>true</externalId>
    <inlineHelpText>ITE Number of the related opportunity line item</inlineHelpText>
    <label>Opportunity product ITE Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>