force-app/main/default/objects/QuoteLineItem/fields/PriceApprovalRequest__c.field-meta.xml
<CustomField>
    <fullName>PriceApprovalRequest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Price Approval Request that this quote is related to.</description>
    <inlineHelpText>Price Approval Request that this quote is related to.</inlineHelpText>
    <label>Price Approval Request</label>
    <referenceTo>PriceApprovalRequest__c</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>Quote_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>