force-app/main/default/objects/QuoteLineItem/fields/ProductSpecLevel__c.field-meta.xml
<CustomField>
    <fullName>ProductSpecLevel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product standard specification level.</description>
    <inlineHelpText>Product standard specification level.</inlineHelpText>
    <label>Product Spec Level</label>
    <referenceTo>ProductSpecLevel__c</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>QuoteLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>