force-app/main/default/objects/QuoteLineItem/fields/ProductStandard__c.field-meta.xml
<CustomField>
    <fullName>ProductStandard__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Technical standard that defines requirements to the product</description>
    <inlineHelpText>Technical standard that defines requirements to the product</inlineHelpText>
    <label>Product Standard</label>
    <referenceTo>ProductStandard__c</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>QuoteLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>