force-app/main/default/objects/QuoteLineItem/fields/ROI__c.field-meta.xml
<CustomField>
    <fullName>ROI__c</fullName>
    <label>ROI</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>