force-app/main/default/objects/QuoteLineItem/fields/Sales_Price_lb__c.field-meta.xml
<CustomField>
    <fullName>Sales_Price_lb__c</fullName>
    <label>Sales Price (per lb)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>