force-app/main/default/objects/QuoteLineItem/fields/ShippingPoint__c.field-meta.xml
<CustomField>
    <fullName>ShippingPoint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Where to delivery products.</description>
    <inlineHelpText>Where to delivery products.</inlineHelpText>
    <label>Shipping Point</label>
    <referenceTo>ShippingPoint__c</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>Quote_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>