force-app/main/default/objects/QuoteLineItem/fields/showInPDF__c.field-meta.xml
<CustomField>
    <fullName>showInPDF__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this field is required when creating pdf</description>
    <label>Show In PDF</label>
    <type>Checkbox</type>
</CustomField>