force-app/main/default/objects/QuoteLineItem/fields/TransportationCost_t__c.field-meta.xml
<CustomField>
    <fullName>TransportationCost_t__c</fullName>
    <label>Transportation Cost (per t)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>