force-app/main/default/objects/QuoteLineItem/fields/TubeEnds__c.field-meta.xml
<CustomField>
    <fullName>TubeEnds__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Tube ends type</description>
    <inlineHelpText>Tube ends type</inlineHelpText>
    <label>Ends</label>
    <referenceTo>TubeEnds__c</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>QuoteLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>