force-app/main/default/objects/QuoteLineItem/fields/TubeLengthSize__c.field-meta.xml
<CustomField>
    <fullName>TubeLengthSize__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Tube length size</description>
    <inlineHelpText>Tube length size</inlineHelpText>
    <label>Length Size</label>
    <referenceTo>TubeLengthSize__c</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>QuoteLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>