force-app/main/default/objects/QuoteLineItem/fields/TubeOD__c.field-meta.xml
<CustomField>
    <fullName>TubeOD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OD</label>
    <referenceTo>TubeOD__c</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>QuoteLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>