force-app/main/default/objects/QuoteLineItem/fields/TubeWT__c.field-meta.xml
<CustomField>
    <fullName>TubeWT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Tube wall thickness.</description>
    <inlineHelpText>Tube wall thickness.</inlineHelpText>
    <label>WT</label>
    <referenceTo>TubeWT__c</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>Quote_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>