force-app/main/default/objects/QuoteLineItem/fields/UnitPriceEXW__c.field-meta.xml
<CustomField>
    <fullName>UnitPriceEXW__c</fullName>
    <label>Unit Price (EXW)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>