force-app/main/default/objects/QuoteLineItem/fields/Weight_kpm__c.field-meta.xml
<CustomField>
    <fullName>Weight_kpm__c</fullName>
    <description>Linear mass density - kilograms per meter.</description>
    <inlineHelpText>Linear mass density - kilograms per meter.</inlineHelpText>
    <label>Weight (kpm)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>