force-app/main/default/objects/QuoteLineItem/fields/Weight_ppf__c.field-meta.xml
<CustomField>
    <fullName>Weight_ppf__c</fullName>
    <description>Linear mass density - pounds per foot.</description>
    <inlineHelpText>Linear mass density - pounds per foot.</inlineHelpText>
    <label>Weight (ppf)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>