force-app/main/default/objects/QuoteLineItem/fields/WheelDiameter__c.field-meta.xml
<CustomField>
    <fullName>WheelDiameter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Wheel Diameter</label>
    <referenceTo>WheelDiameter__c</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>Quote_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>