force-app/main/default/objects/QuoteLineItem/fields/WheelDrawing__c.field-meta.xml
<CustomField>
    <fullName>WheelDrawing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Wheel Drawing</label>
    <referenceTo>WheelDrawing__c</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>Quote_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>