force-app/main/default/objects/QuoteLineItem/fields/WheelHub__c.field-meta.xml
<CustomField>
    <fullName>WheelHub__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Wheel Hub</label>
    <referenceTo>WheelHub__c</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>Quote_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>