force-app/main/default/objects/QuoteLineItem/fields/WheelStandard__c.field-meta.xml
<CustomField>
    <fullName>WheelStandard__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Wheel Standard</label>
    <referenceTo>WheelProductStandard__c</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>Quote_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>