force-app/main/default/objects/QuoteLineItem/fields/WheelSteelGrade__c.field-meta.xml
<CustomField>
    <fullName>WheelSteelGrade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Wheel Steel Grade</label>
    <referenceTo>WheelSteelGrade__c</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>Quote_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>